@@ -1,32 +1,0 @@
-<?xml version="1.0"?>
-
-<jnlp spec="1.0+" codebase="http://prdownloads.sourceforge.net/jedit"
-  href="http://www.jedit.org/jedit_devel.jnlp">
-  <information>
-    <title>jEdit</title>
-
-    <vendor>Slava Pestov</vendor>
-    <homepage href="http://www.jedit.org" />
-
-    <description>jEdit is a programmer's text editor that can be made into a
-    rather powerful IDE by installing various plugins.</description>
-    <description kind="short">jEdit is a powerful programmer's text
-    editor.</description>
-    <description kind="tooltip">jEdit text editor</description>
-
-    <icon href="jedit_icon1.gif" width="32" height="32" />
-
-    <offline-allowed />
-  </information>
-
-  <resources>
-    <j2se version="1.3+" />
-    <jar href="jedit40pre3webstart.jar" />
-  </resources>
-
-  <security>
-    <all-permissions />
-  </security>
-
-  <application-desc main-class="org.gjt.sp.jedit.jEdit" />
-</jnlp>
